# SNP

./: CMakeLists.txt
Praktikum1/: bitcoin  bitcoin.c  count  count.c  hello  hello.c
Praktikum3/: 1_bitop  2_swap  3_lowerUpper  4_zweier_potenz  5_bin_calculator  6_simple_shapes  bin_calculator.c  bitop.c  lowerUpper.c  simple_shapes.c  swap.c  zweier_potenz.c
prakikum2/: aufgabe3.c  aufgabe4.c
praktikum4/work/modularize/src/: read.c  read.d  read.h  rectang.c  rectang.d  rectang.h  triangle.c
praktikum4/work/show-dependencies/: Makefile
praktikum6/work/personen-verwaltung/src/: list.c  list.h  main.c  person.c  person.h
praktikum6/work/personen-verwaltung/tests/: test.in  tests.c
praktikum7/: README.md
praktikum8/work/Sync/advancedSequence/: coffeeTeller.c  coffeeTeller.e  customer.c  customer.e  startApp.c  startApp.e
praktikum8/work/Sync/banking-solution/a3/: main.e
praktikum8/work/Sync/banking/a2/: banking.c  main.e
praktikum8/work/Sync/banking/a3/: banking.c  main.e
praktikum8/work/Sync/basicSequence/: coffeeTeller.c  coffeeTeller.e  customer.c  customer.e  startApp.c  startApp.e
praktikum8/work/Sync/mutex/: coffeeTeller.c  customer.c  startApp.e
praktikum9/: README.md
praktikum9/personen-verwaltung-persistent/: Makefile
praktikum9/personen-verwaltung-persistent/src/: file_io.c  file_io.d  list.d  main.c  main.d  person.c  person.d  person.h
praktikum9/personen-verwaltung-persistent/tests/: runtest
praktukum3/: days.c  daysPerMonth.c
